test_src/compiler_errors/types/arithmetic/ModDoubleError1.b
class ModDoubleError2 {
    void test() {
        println(1.0 % 2);
    }
}
